src/test/ui/generic-associated-types/issue-92096.migrate.stderr
error[E0311]: the parameter type `C` may not live long enough
  --> $DIR/issue-92096.rs:20:33
   |
LL | fn call_connect<C>(c: &'_ C) -> impl '_ + Future + Send
   |                 -               ^^^^^^^^^^^^^^^^^^^^^^^ ...so that the type `C` will meet its required lifetime bounds
   |                 |
   |                 help: consider adding an explicit lifetime bound...: `C: 'a`

error[E0311]: the parameter type `C` may not live long enough
  --> $DIR/issue-92096.rs:20:33
   |
LL | fn call_connect<C>(c: &'_ C) -> impl '_ + Future + Send
   |                 -               ^^^^^^^^^^^^^^^^^^^^^^^ ...so that the type `C` will meet its required lifetime bounds
   |                 |
   |                 help: consider adding an explicit lifetime bound...: `C: 'a`

error: aborting due to 2 previous errors

